...
                                <rect key="frame" x="0.0" y="0.0" width="600" height="537"/>
                                <subviews>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header" translatesAutoresizingMaskIntoConstraints="NO" id="3XG-l8-w04">
                                        <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
                                        <constraints>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                        <state key="normal" title="Support site" backgroundImage="empty_state_button">
                                            <color key="titleColor" red="0.94117647059999998" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                    </constraints>
                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                    <state key="normal" title="Add Tour" backgroundImage="generic_button">
                                        <color key="titleColor" red="0.027450980390000001" green="0.24313725489999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                                    </state>
...
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Your Tours" id="lbB-tE-EcH">
                        <barButtonItem key="backBarButtonItem" title="Back" id="UTf-sz-Ubf"/>
                        <barButtonItem key="rightBarButtonItem" title="About  " id="9za-Rm-K55">
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                                <state key="normal" title="Start Tour" backgroundImage="generic_button">
                                    <color key="titleColor" red="0.027450980390000001" green="0.24313725489999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                    </view>
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <navigationItem key="navigationItem" title="Add New Tour" id="h1S-ya-PM5"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
...
                        </view>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="test" id="Qi3-dV-v8z">
                                <rect key="frame" x="0.0" y="88" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
        <scene sceneID="OIh-ep-3KP">
            <objects>
                <navigationController title="entryController" toolbarHidden="NO" id="xBy-sT-h06" customClass="NavViewController" customModule="Tourable" customModuleProvider="target" sceneMemberID="viewController">
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="vGh-hI-a3l">
...
