...

    ///Prompts input of a tour code from the user.
    func showTourKeyAlert(){
        let alert = UIAlertView(title: "Add New Tour", message: "Enter the provided tour key", delegate: self, cancelButtonTitle:"Cancel")
        alert.alertViewStyle = UIAlertViewStyle.PlainTextInput
        
        alert.addButtonWithTitle("Add")
        let textField = alert.textFieldAtIndex(0)
        textField?.keyboardAppearance = UIKeyboardAppearance.Alert
        textField!.placeholder = "Enter Tour Key"
        alert.show()
    }

    ///Controls the behavior of the alerts for user tour code entry
    func alertView(alertView: UIAlertView, clickedButtonAtIndex buttonIndex: Int) {
        switch buttonIndex{
...
